Enhance Cyber Security backend with new detection capabilities and improved documentation